# opengl_learning

./: .gitignore  CMakeLists.txt  main.cc
glad/: CMakeLists.txt  glad.c
stb_image/: CMakeLists.txt
trainings/: CMakeLists.txt  Camera.cc  Camera.hh  Ebo.cc  Ebo.hh  FirstObject.cc  FirstObject.hh  FrameBufferHandler.hh  Image.hh  OpenGLObject.hh  Program.cc  Program.hh  RenderingLoop.cc  RenderingLoop.hh  SecondObject.cc  SecondObject.hh  Shader.hh  ShaderLoader.cc  ShaderLoader.hh  Test.hh  Texture.cc  Texture.hh  Uniform.cc  Uniform.hh  Vao.cc  Vao.hh  VaoWithVbo.cc  VaoWithVbo.hh  Vbo.cc  Vbo.hh  WindowCreator.cc  WindowCreator.hh  window.cc  window.hh
trainings/shaders/: .triangle.fs.swp  triangle.fs  triangle.vs  triangle_yellow.fs
trainings/utils/: Ebo.cc  Ebo.hh  FrameBufferHandler.cc  Image.cc  Program.cc  Shader.cc  ShaderLoader.hh  Texture.hh  Uniform.hh  Vao.cc  Vao.hh  Vbo.cc
